# 1C-Contest

./: CMakeLists.txt  README.md
src/: dist.cpp  dist.hpp  find_similar_files.cpp  find_similar_files.hpp  main.cpp
